Fixed font-sizes on mobile

--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -32,4 +32,7 @@
 
     .main-pane
         margin: 0.25rem
+
+    html
+        font-size: 14px
 //
