--- a/app/styles/components/_tab.sass
+++ b/app/styles/components/_tab.sass
@@ -8,7 +8,7 @@
 
 
 .tab
-    font-size: 1.2rem
+    font-size: 1.15rem
     +flex(row, center, center)
     flex-grow: 1
     padding: .5em
